# 5GAutoConf

./: .gitignore  AUTHORS.md  CITATION.cff  LICENSE  MANIFEST.in  Makefile  README.md  logging_config.py  pyproject.toml  pytest.ini  run.py  static_settings.json  test.py
.github/workflows/: docs.yml
configurator/: __init__.py  generator.py  tables.py  tools.py  ts_dicts.py
docs/: conf.py  index.rst
docs/guides/: index.rst  manual_installation.md  quickstart.md  waveform_parameter_analysis.md  waveform_parameter_synthesis.md
docs/theory/: cell_configuration_parameter_computation.md  glossary.md  index.rst
scripts/: __init__.py  build_long_guard_time_prach_pusch_combination_tables.py  build_prach_ssb_collision_free_tables.py  build_tau_d_max_rtd_max_table.py
testfiles/: test_config_1  test_config_2  test_static_conf_1.json
